--- a/lists/adlist.ini
+++ b/lists/adlist.ini
@@ -1,4 +1,4 @@
 [Ad-Urls]
-Hagezi = https://raw.githubusercontent.com/hagezi/dns-blocklists/main/wildcard/light-onlydomains.txt
-Adguard = https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
-Oisd = https://small.oisd.nl/domainswild2
+Adguard = https://adguardteam.github.io/HostlistsRegistry/assets/filter_1.txt
+AdguardPopups = https://adguardteam.github.io/HostlistsRegistry/assets/filter_59.txt
+CCH = https://raw.githubusercontent.com/johang/cookie-consent-hosts/master/hosts.txt
